# TCP_words_counter

./: .gitignore  README.md  Technical specification
tcpClient/: CMakeLists.txt  res.qrc
tcpClient/conan/: conanfile.py  gcc-13
tcpClient/filesToSend/: gdoc_text.txt
tcpClient/include/: MainWindow.h
tcpClient/src/: MainWindow.cpp  MainWindow.ui  main.cpp
tcpServer/: CMakeLists.txt
tcpServer/conan/: conanfile.py  gcc-11  gcc-13  profile
tcpServer/include/: SocketHandler.h
tcpServer/src/: SocketHandler.cpp  main.cpp
